deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-service
spec:
  selector:
    matchLabels:
      app: frontend-service
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: frontend-service
    spec:
      containers:
        - name: octopub-frontend
          image: octopussamples/octopub-frontend:0.1.168
          ports:
            - name: http
              containerPort: 7080
